<resources>
    <string name="app_name"> Online Community</string>
    <string name="action_settings">Settings</string>

    <string name="button_login">LOGIN</string>
    <string name="button_signup">SIGNUP</string>
    <string name="button_gotoclass">GO TO CLASS</string>
    <string name="button_chat">CHAT</string>
    <string name="button_watchvideo">WATCH VIDEO</string>

    <string name='or'>OR</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_my_course">My Course</string>
    <string name="title_activity_course_container">ActivityCourseContainer</string>
    <string name="title_activity_course_intro">ActivityCourseIntro</string>
    <string name="title_activity_instructor_intro">ActivityInstructorIntro</string>
    <string name="title_activity_course_detail">ActivityCourseDetail</string>
    <string name="title_activity_video_player">ActivityVideoPlayer</string>
    <string name="title_activity_user_profile">ActivityUserProfile</string>
    <string name="title_activity_user_edit_profile">ActivityUserEditProfile</string>
    <string name="title_activity_lesson">ActivityLesson</string>
    <string name="title_activity_in_class">ActivityInClass</string>
    <string name="title_activity_chat">ActivityChat</string>


    <string name="title_menu_search">Search</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="search_hint1">Search</string>
    <string name="text_intro1"> Interaction - peer to peer study</string>
    <string name="text_intro2"> Flexibility - learn, as well as teach</string>

    <string name="text_cat_art">Art + Design</string>
    <string name="text_cat_com">Computer</string>
    <string name="text_cat_fin">Finance</string>
    <string name="text_cat_life">Life Skill</string>
    <string name="text_cat_lan">Language</string>
    <string name="text_cat_music">Music</string>
    <string name="text_cat_math">Math + Science</string>
    <string name="text_cat_sport">Sport</string>

    <string name="hello_world">Hello world!</string>



</resources>
