<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.sjsu.qi.onlinecommunity.ActivitySignup">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_signup"
        android:layout_weight="1">
    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-15dp"
        android:padding="5dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="-15.0dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo_word"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_view"
            android:layout_marginTop="-55.0dp"
            android:src="@drawable/logo_mission"
            android:layout_marginRight="15.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-65dp"
        android:padding="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_signup_done"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:background="#1569C7"
                android:layout_marginRight="10dip"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button_signup" />

            <Button
                android:id="@+id/button_login"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:background="#b0c4de"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button_login" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="14.0dip"
                android:background="#FFFFFF"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="14.0dip"
                android:background="#FFFFFF"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/text_password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="14.0dip"
                android:background="#FFFFFF"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/text_email"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

